# vulkyn

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/asm/: asm.rs  lexer.rs  mod.rs  parser.rs  test.rs  token.rs
src/vm/: memory.rs  mod.rs  register.rs  test.rs  vm.rs  word.rs
test/: test.vasm  test.vk
test/instructions/: add.vasm  and.vasm  band.vasm  bor.vasm  bxor.vasm  diff.vasm  div.vasm  egreat.vasm  eless.vasm  equal.vasm  less.vasm  lshift.vasm  minus.vasm  mod.vasm  mul.vasm  nop.vasm  not.vasm  or.vasm  pop.vasm  push.vasm  radd.vasm  rand.vasm  rband.vasm  rbor.vasm  rbxor.vasm  rcopy.vasm  rdiff..vasm  rdiv.vasm  regreat.vasm  reless.vasm  requal.vasm  rless.vasm  rlshift.vasm  rminus.vasm  rmod.vasm  rmul.vasm  rnot.vasm  ror..vasm  rrshift.vasm  rshift.vasm
