[package]
name = "vulkyn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
hex = "0.4.3"
serde = {version = "1.0.163",features = ["derive"]}
kwargs = {git="https://github.com/WillemNicolas/kwargs.git"}
